@@ -3,6 +3,7 @@ Version 0.10.0
 - Adds multikey signatures.
 - Adds Symmetric-Key Encrypted Session Key Packets support.
 - Adds TwoFish cipher support.
+- Adds ability to determine keys that a message has been encrypted.
 - Improves decryption and signed messages validation.
 - Fixes partial length packets calculations.
 - Fixes reading armored messages without checksum.
